--- a/home.html
+++ b/home.html
@@ -269,7 +269,8 @@
                             <img src="image/service-1.png" class="w-100">
                             <div class="slide-up">
                                 <h4 class="text-white">Device Drivers Development</h4>
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                                <p>Our expertise in device driver development ensures seamless interaction between hardware and software components. We create reliable, efficient, and optimized drivers that enhance device functionality
+                                    and performance, providing a smooth and stable user experience. Desktop Application Development</p>
                             </div>
                         </div>
                     </div>
@@ -278,7 +279,11 @@
                             <img src="image/service-2.png" class="w-100">
                             <div class="slide-up">
                                 <h4 class="text-white">Cross-Platform Desktop Application Development</h4>
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                                <p>We provide comprehensive desktop
+                                    application development services, creating powerful, user-friendly applications
+                                    for various operating systems. Our tailored solutions deliver high functionality,
+                                    intuitive interfaces, and seamless integration with your existing systems.
+                                    </p>
                             </div>
                             
                         </div>
@@ -288,7 +293,10 @@
                             <img src="image/service-3.png" class="w-100">
                             <div class="slide-up">
                                 <h4 class="text-white">Firmware/IoT Development</h4>
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                                <p>Specializing in firmware development, we craft
+                                    robust and efficient low-level software tailored for embedded systems. Our
+                                    solutions adhere to stringent industry standards, ensuring superior performance,
+                                    reliability, and security for your electronic devices.</p>
                             </div>
                         </div>
                     </div>
@@ -297,7 +305,10 @@
                             <img src="image/service-4.png" class="w-100">
                             <div class="slide-up">
                                 <h4 class="text-white">Mobile Application Development</h4>
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                                <p> Our mobile application development services cover the entire development lifecycle, from concept to deployment. We
+                                    develop high-performance mobile apps for iOS and Android platforms, focusing
+                                    on user experience, scalability, and security. Our solutions help you engage your
+                                    audience, streamline operations, and enhance your digital presence.</p>
                             </div>
                         </div>
                     </div>
@@ -355,7 +366,7 @@
                                         <li><a href="product.html" class="text-decoration-none">products</a></li>
                                         <li><a href="contact.html" class="text-decoration-none">Contact us</a></li>
                                         <li><a href="#" class="text-decoration-none">Privacy Policy</a></li>
-                                        <li><a href="#" class="text-decoration-none">Trademark Disclaimer</a></li>
+                                        <li><a href="Trademark.html" class="text-decoration-none">Trademark Disclaimer</a></li>
                                     </ul>
                                 </div>
                             </div>
