--- a/product.html
+++ b/product.html
@@ -215,7 +215,7 @@
                                         <li><a href="product.html" class="text-decoration-none">products</a></li>
                                         <li><a href="contact.html" class="text-decoration-none">Contact us</a></li>
                                         <li><a href="#" class="text-decoration-none">Privacy Policy</a></li>
-                                        <li><a href="#" class="text-decoration-none">Trademark Disclaimer</a></li>
+                                        <li><a href="Trademark.html" class="text-decoration-none">Trademark Disclaimer</a></li>
                                     </ul>
                                 </div>
                             </div>
