--- a/Trademark.html
+++ b/Trademark.html
@@ -51,7 +51,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 first-sec-footer">
-                        <img src="image/logo.png" class="logo">
+                        <a href="home.html"><img src="image/logo.png" class="logo"></a>
                         <div class="social-icon d-md-block d-none">
                             <a href="https://www.facebook.com/IndiLogic/"><img src="image/Facebook.png"></a>
                             <a href="https://www.linkedin.com/company/indilogic/"><img src="image/Linkedin.png"></a>
