--- a/service.html
+++ b/service.html
@@ -61,8 +61,8 @@
                                     </div>
                                 </div>
                                 <div class="service-box-flip text-white">
-                                    <h4>Customized solutions</h4>
-                                    <p>Our team had the privilege of collaborating closely with the Miami-based Alienware team to develop the core architecture for the Alienware Command.</p>
+                                    <h4>One time Delivery </h4>
+                                    <p>Delivering innovative tech solutions that drive growth and efficiency, one project at a time.</p>
                                 </div>
                             </div>
                         </div>
@@ -83,7 +83,7 @@
                                 </div>
                                 <div class="service-box-flip text-white">
                                     <h4>Customized solutions</h4>
-                                    <p>Our team had the privilege of collaborating closely with the Miami-based Alienware team to develop the core architecture for the Alienware Command.</p>
+                                    <p>Tailoring cutting-edge solutions to meet your unique business needs and goals.</p>
                                 </div>
                             </div>
                         </div>
@@ -103,8 +103,8 @@
                                     </div>
                                 </div>
                                 <div class="service-box-flip text-white">
-                                    <h4>Customized solutions</h4>
-                                    <p>Our team had the privilege of collaborating closely with the Miami-based Alienware team to develop the core architecture for the Alienware Command.</p>
+                                    <h4>Data Protection</h4>
+                                    <p>Ensuring robust data protection to safeguard your business with uncompromising security.</p>
                                 </div>
                             </div>
                         </div>
@@ -124,8 +124,8 @@
                                     </div>
                                 </div>
                                 <div class="service-box-flip text-white">
-                                    <h4>Customized solutions</h4>
-                                    <p>Our team had the privilege of collaborating closely with the Miami-based Alienware team to develop the core architecture for the Alienware Command.</p>
+                                    <h4>Seamless Integration </h4>
+                                    <p>Achieving seamless integration for effortless connectivity across your systems and platforms</p>
                                 </div>
                             </div>
                         </div>
@@ -440,7 +440,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 first-sec-footer">
-                        <img src="image/logo.png" class="logo">
+                        <a href="home.html"><img src="image/logo.png" class="logo"></a>
                         <div class="social-icon d-md-block d-none">
                             <a href="https://www.facebook.com/IndiLogic/"><img src="image/Facebook.png"></a>
                             <a href="https://www.linkedin.com/company/indilogic/"><img src="image/Linkedin.png"></a>
