--- a/service.html
+++ b/service.html
@@ -442,10 +442,26 @@
                     <div class="col-md-6 first-sec-footer">
                         <a href="home.html"><img src="image/logo.png" class="logo"></a>
                         <div class="social-icon d-md-block d-none">
-                            <a href="https://www.facebook.com/IndiLogic/"><img src="image/Facebook.png"></a>
-                            <a href="https://www.linkedin.com/company/indilogic/"><img src="image/Linkedin.png"></a>
-                            <a href="https://x.com/indilogicllc"><img src="image/Twitter.png"></a>
-                            <a href="https://www.instagram.com/indilogic_llc/"><img src="image/Instagram.png"></a>
+                            <a href="https://www.facebook.com/IndiLogic/" target="_blank">
+                                <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M21.8565 0H2.77572C1.45847 0 0.390625 1.08071 0.390625 2.41382V21.7244C0.390625 23.0575 1.45847 24.1382 2.77572 24.1382H12.3161V15.0509H8.73845V11.6431H12.3161V9.81318C12.3161 6.34864 14.0926 4.82765 16.9968 4.82765C18.3604 4.82765 19.094 4.92591 19.4505 4.97365L19.4714 4.97645V8.2354H17.4906C16.2579 8.2354 15.8937 8.8806 15.8937 10.1869V11.6431H19.4404L18.9501 15.0509H15.8937V24.1382H21.8565C23.1737 24.1382 24.2416 23.0575 24.2416 21.7244V2.41382C24.2416 1.08071 23.1737 0 21.8565 0Z" fill="#236397"/>
+                                </svg>
+                            </a>
+                            <a href="https://www.linkedin.com/company/indilogic/" target="_blank">
+                                <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M21.5596 0H2.47884C1.16159 0 0.09375 1.08071 0.09375 2.41382V21.7244C0.09375 23.0575 1.16159 24.1382 2.47884 24.1382H21.5596C22.8768 24.1382 23.9447 23.0575 23.9447 21.7244V2.41382C23.9447 1.08071 22.8768 0 21.5596 0ZM4.86394 5.50769C4.86394 6.5498 5.69909 7.39644 6.73191 7.39644C7.76147 7.39644 8.5988 6.5498 8.5988 5.50769C8.5988 4.46668 7.76147 3.62003 6.73191 3.62003C5.70018 3.62003 4.86394 4.46558 4.86394 5.50769ZM5.16207 19.3107H8.36587V8.88741H5.16207V19.3107ZM20.371 19.311H17.1693V14.2421C17.1693 13.033 17.1476 11.4781 15.5044 11.4781C13.8374 11.4781 13.5811 12.7947 13.5811 14.1542V19.311H10.3795V8.88766H13.4529V10.3119H13.4964C13.9243 9.49272 14.969 8.6285 16.5275 8.6285C19.7715 8.6285 20.371 10.7874 20.371 13.5942V19.311Z" fill="#236397"/>
+                                </svg>
+                            </a>
+                            <a href="https://x.com/indilogicllc" target="_blank">
+                                <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M22.2588 0H3.17806C1.86081 0 0.792969 1.08071 0.792969 2.41382V21.7244C0.792969 23.0575 1.86081 24.1382 3.17806 24.1382H22.2588C23.5761 24.1382 24.6439 23.0575 24.6439 21.7244V2.41382C24.6439 1.08071 23.5761 0 22.2588 0ZM19.0988 7.5293C19.7917 7.44825 20.4518 7.26855 21.0663 7.00151C20.6071 7.67319 20.026 8.2632 19.3563 8.73633C19.3627 8.88022 19.3659 9.02473 19.3659 9.16988C19.3659 13.599 15.9216 18.7061 9.62119 18.7061C7.68649 18.7061 5.88664 18.1513 4.37061 17.2006C4.63901 17.232 4.91191 17.2477 5.18802 17.2477C6.79331 17.2477 8.27018 16.7117 9.44204 15.8126C7.94334 15.7856 6.67837 14.8161 6.24238 13.4846C6.45106 13.523 6.66617 13.5443 6.88642 13.5443C7.19913 13.5443 7.50221 13.5035 7.78923 13.4268C6.22183 13.1196 5.04162 11.7649 5.04162 10.1407V10.0986C5.5033 10.3493 6.03176 10.5001 6.59297 10.5177C5.6741 9.91697 5.06987 8.8909 5.06987 7.72849C5.06987 7.11335 5.23875 6.5378 5.53284 6.04267C7.22289 8.07093 9.7464 9.4055 12.5929 9.54499C12.5351 9.30057 12.5043 9.04421 12.5043 8.78157C12.5043 6.93113 14.0377 5.43005 15.9293 5.43005C16.9143 5.43005 17.8043 5.83721 18.4291 6.48879C19.2099 6.33799 19.9432 6.05901 20.6046 5.6751C20.349 6.458 19.8064 7.11461 19.0988 7.5293Z" fill="#236397"/>
+                                </svg>
+                            </a>
+                            <a href="https://www.instagram.com/indilogic_llc/" target="_blank">
+                                <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M7.65137 0H17.1917C21.1435 0 24.347 3.24212 24.347 7.24147V16.8968C24.347 20.8961 21.1435 24.1382 17.1917 24.1382H7.65137C3.69962 24.1382 0.496094 20.8961 0.496094 16.8968V7.24147C0.496094 3.24212 3.69962 0 7.65137 0ZM19.5768 3.62003C20.1731 3.62003 20.7694 4.22349 20.7694 4.82694C20.7694 5.4304 20.1731 6.03385 19.5768 6.03385C18.9806 6.03385 18.3843 5.4304 18.3843 4.82694C18.3843 4.22349 18.9806 3.62003 19.5768 3.62003ZM18.3843 12.0695C18.3843 8.74141 15.71 6.03491 12.4216 6.03491C9.13311 6.03491 6.45883 8.74141 6.45883 12.0695C6.45883 15.3975 9.13311 18.104 12.4216 18.104C15.71 18.104 18.3843 15.3975 18.3843 12.0695ZM12.4216 8.4475C10.4457 8.4475 8.84392 10.0686 8.84392 12.0682C8.84392 14.0679 10.4457 15.689 12.4216 15.689C14.3974 15.689 15.9992 14.0679 15.9992 12.0682C15.9992 10.0686 14.3974 8.4475 12.4216 8.4475Z" fill="#236397"/>
+                                </svg>
+                            </a>
                         </div>
                     </div>
                     <div class="col-md-6">
