--- a/home.html
+++ b/home.html
@@ -265,52 +265,60 @@
                 </div>
                 <div class="row service-sec">
                     <div class="col-md-6 pe-lg-5">
-                        <div class="service" id="Development1">
-                            <img src="image/service-1.png" class="w-100">
-                            <div class="slide-up">
-                                <h4 class="text-white">Device Drivers Development</h4>
-                                <p>Our expertise in device driver development ensures seamless interaction between hardware and software components. We create reliable, efficient, and optimized drivers that enhance device functionality
-                                    and performance, providing a smooth and stable user experience. Desktop Application Development</p>
+                        <a href="http://13.53.42.103/indilogic/service.html#service1">
+                            <div class="service" id="Development1">
+                                <img src="image/service-1.png" class="w-100">
+                                <div class="slide-up">
+                                    <h4 class="text-white">Device Drivers Development</h4>
+                                    <p>Our expertise in device driver development ensures seamless interaction between hardware and software components. We create reliable, efficient, and optimized drivers that enhance device functionality
+                                        and performance, providing a smooth and stable user experience. Desktop Application Development</p>
+                                </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
                     <div class="col-md-6 ps-lg-5">
-                        <div class="service" id="Development2">
-                            <img src="image/service-2.png" class="w-100">
-                            <div class="slide-up">
-                                <h4 class="text-white">Cross-Platform Desktop Application Development</h4>
-                                <p>We provide comprehensive desktop
-                                    application development services, creating powerful, user-friendly applications
-                                    for various operating systems. Our tailored solutions deliver high functionality,
-                                    intuitive interfaces, and seamless integration with your existing systems.
-                                    </p>
+                        <a href="http://13.53.42.103/indilogic/service.html#service2">
+                            <div class="service" id="Development2">
+                                <img src="image/service-2.png" class="w-100">
+                                <div class="slide-up">
+                                    <h4 class="text-white">Cross-Platform Desktop Application Development</h4>
+                                    <p>We provide comprehensive desktop
+                                        application development services, creating powerful, user-friendly applications
+                                        for various operating systems. Our tailored solutions deliver high functionality,
+                                        intuitive interfaces, and seamless integration with your existing systems.
+                                        </p>
+                                </div>
+                                
                             </div>
-                            
-                        </div>
+                        </a>
                     </div>
                     <div class="col-md-6 pe-lg-5">
-                        <div class="service" id="Development3">
-                            <img src="image/service-3.png" class="w-100">
-                            <div class="slide-up">
-                                <h4 class="text-white">Firmware/IoT Development</h4>
-                                <p>Specializing in firmware development, we craft
-                                    robust and efficient low-level software tailored for embedded systems. Our
-                                    solutions adhere to stringent industry standards, ensuring superior performance,
-                                    reliability, and security for your electronic devices.</p>
+                        <a href="http://13.53.42.103/indilogic/service.html#service3">
+                            <div class="service" id="Development3">
+                                <img src="image/service-3.png" class="w-100">
+                                <div class="slide-up">
+                                    <h4 class="text-white">Firmware/IoT Development</h4>
+                                    <p>Specializing in firmware development, we craft
+                                        robust and efficient low-level software tailored for embedded systems. Our
+                                        solutions adhere to stringent industry standards, ensuring superior performance,
+                                        reliability, and security for your electronic devices.</p>
+                                </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
                     <div class="col-md-6 ps-lg-5">
-                        <div class="service" id="Development4">
-                            <img src="image/service-4.png" class="w-100">
-                            <div class="slide-up">
-                                <h4 class="text-white">Mobile Application Development</h4>
-                                <p> Our mobile application development services cover the entire development lifecycle, from concept to deployment. We
-                                    develop high-performance mobile apps for iOS and Android platforms, focusing
-                                    on user experience, scalability, and security. Our solutions help you engage your
-                                    audience, streamline operations, and enhance your digital presence.</p>
+                        <a href="http://13.53.42.103/indilogic/service.html#service4">
+                            <div class="service" id="Development4">
+                                <img src="image/service-4.png" class="w-100">
+                                <div class="slide-up">
+                                    <h4 class="text-white">Mobile Application Development</h4>
+                                    <p> Our mobile application development services cover the entire development lifecycle, from concept to deployment. We
+                                        develop high-performance mobile apps for iOS and Android platforms, focusing
+                                        on user experience, scalability, and security. Our solutions help you engage your
+                                        audience, streamline operations, and enhance your digital presence.</p>
+                                </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
                 </div>
             </div>
