--- a/service.html
+++ b/service.html
@@ -141,7 +141,7 @@
                     In Collaboration with Dell, Powering 16+ million Active Users</h3>
                 </div>
                 <div class="row pt-4 gy-4">
-                    <div class="col-md-4 d-flex">
+                    <div class="col-md-4 d-flex" id="service1">
                         <div class="our-service" data-popup="popup-1">
                             <div class="arrow" >
                                 <svg width="19" height="22" viewBox="0 0 19 22" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -179,7 +179,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-8 d-flex">
+                    <div class="col-md-8 d-flex" id="service2">
                         <div class="our-service px-md-5" data-popup="popup-2" >
                             <div class="arrow" >
                                 <svg width="19" height="22" viewBox="0 0 19 22" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -224,7 +224,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-8 d-flex">
+                    <div class="col-md-8 d-flex" id="service3">
                         <div class="our-service px-md-5" data-popup="popup-3">
                             <div class="arrow" data-popup="popup-3">
                                 <svg width="19" height="22" viewBox="0 0 19 22" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -270,7 +270,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4 d-flex">
+                    <div class="col-md-4 d-flex" id="service4">
                         <div class="our-service" data-popup="popup-4">
                             <div class="arrow">
                                 <svg width="19" height="22" viewBox="0 0 19 22" fill="none" xmlns="http://www.w3.org/2000/svg">
