--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
               <li><a href="about.html" class="text-decoration-none nav-links">About</a></li>
               <li><a href="service.html" class="text-decoration-none nav-links">Services</a></li>
               <li><a href="product.html" class="text-decoration-none nav-links">Products</a></li>
-              <li id="get-in-touch"><a href="contact.html" class="nav-links">Get in touch 
+              <li id="get-in-touch"><a href="contact.html" class="nav-links">Contact Us 
                 <svg width="20" height="25" viewBox="0 0 15 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M7.83789 2.9541L13.1259 8.24214L7.83789 13.5302" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
                   <path d="M13.1249 8.24213L1.875 8.24213" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
@@ -44,7 +44,7 @@
                     <path d="M2.30859 0.573712C1.6994 0.573712 1.20555 1.06756 1.20555 1.67676C1.20555 2.28595 1.6994 2.7798 2.30859 2.7798V0.573712ZM2.30859 2.7798H18.5699V0.573712H2.30859V2.7798Z" fill="#222222"/>
                     <path d="M16.5234 18.6773C16.5188 19.2987 17.0188 19.807 17.6402 19.8126C18.2615 19.8182 18.7689 19.319 18.7735 18.6977L16.5234 18.6773ZM18.7735 18.6977L18.8987 1.68719L16.6486 1.66683L16.5234 18.6773L18.7735 18.6977Z" fill="#222222"/>
                     <path d="M1.11353 18.3852C0.623945 18.9281 0.623945 19.8083 1.11353 20.3511C1.60311 20.894 2.39689 20.894 2.88647 20.3511L1.11353 18.3852ZM2.88647 20.3511L18.2273 3.3403L16.4544 1.37436L1.11353 18.3852L2.88647 20.3511Z" fill="#222222"/>
-                    </svg>Get in touch</a>
+                    </svg>Contact Us</a>
                     <img src="./image/about-p.png" class="mt-md-5 mt-4 w-100">
             </div>
         </section>
