--- a/home.html
+++ b/home.html
@@ -51,7 +51,7 @@
                 <img src="image/banner-m.png" class="w-100 d-md-none d-block">
             </div> 
            <div class="position-absolute translate-middle  start-50">
-                <a href="contact.html" class="text-decoration-none text">Get in touch <svg class="ms-2" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <a href="contact.html" class="text-decoration-none text">Connect <svg class="ms-2" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M7.83594 2.21191L13.124 7.49996L7.83594 12.788" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                     <path d="M13.1249 7.49988L1.875 7.49988" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                     </svg>
