--- a/service.html
+++ b/service.html
@@ -361,6 +361,18 @@
                         <img src="image/tech-9.png">
                         <p>Cloud Infrastructure</p>
                     </div>
+                    <div class="logos">
+                        <img src="image/tech-10.jpg">
+                        <p>Cloud Infrastructure</p>
+                    </div>
+                    <div class="logos">
+                        <img src="image/tech-11.jpg">
+                        <p>Cloud Infrastructure</p>
+                    </div>
+                    <div class="logos">
+                        <img src="image/tech-12.jpg">
+                        <p>Cloud Infrastructure</p>
+                    </div>
                 </div>
             </div>
         </section>
