--- a/service.html
+++ b/service.html
@@ -363,15 +363,15 @@
                     </div>
                     <div class="logos">
                         <img src="image/tech-10.jpg">
-                        <p>Cloud Infrastructure</p>
+                        <p>.Net</p>
                     </div>
                     <div class="logos">
                         <img src="image/tech-11.jpg">
-                        <p>Cloud Infrastructure</p>
+                        <p>#C</p>
                     </div>
                     <div class="logos">
                         <img src="image/tech-12.jpg">
-                        <p>Cloud Infrastructure</p>
+                        <p>Rust</p>
                     </div>
                 </div>
             </div>
