--- a/home.html
+++ b/home.html
@@ -20,10 +20,7 @@
               <li><a href="service.html" class="text-decoration-none nav-links">Services</a></li>
               <li><a href="product.html" class="text-decoration-none nav-links">Products</a></li>
               <li id="get-in-touch"><a href="contact.html" class="nav-links">Contact Us
-                <svg width="20" height="25" viewBox="0 0 15 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M7.83789 2.9541L13.1259 8.24214L7.83789 13.5302" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
-                  <path d="M13.1249 8.24213L1.875 8.24213" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg></a>
+                </a>
               </li>
             </ul>
           </nav>
@@ -503,7 +500,7 @@
                                 <div class="f-address">
                                     <h5 class="f-title">Locations</h5>
                                     <p><b>USA:</b> IndiLogic LLC, Creek Bend Office Condominiums, 930 South Bell Blvd, Suite 302 Cedar Park, TX 78613, USA</p>
-                                    <p><b>INDIA:</b> IndiLogic Pvt. Ltd. , 8th Floor, Supertech Astralis , Business No. 3, Office No. 816  & 848 , Sector 94, Noida, Gautam Buddha Nagar, Uttar Pradesh, Pin: 2013014</p>
+                                    <p><b>INDIA:</b> IndiLogic Pvt. Ltd. , 8th Floor, Supertech Astralis , Business No. 3, Office No. 816  & 848 , Sector 94, Noida, Gautam Buddha Nagar, Uttar Pradesh India, Pin: 201301</p>
                                 </div>
                                 <div class="social-icon d-md-none d-block">
                                     <a href="#"><img src="image/Facebook.png"></a>
