--- a/Trademark.html
+++ b/Trademark.html
@@ -95,7 +95,7 @@
                                 <div class="f-address">
                                     <h5 class="f-title">Locations</h5>
                                     <p><b>USA:</b> IndiLogic LLC, Creek Bend Office Condominiums, 930 South Bell Blvd, Suite 302 Cedar Park, TX 78613, USA</p>
-                                    <p><b>INDIA:</b> IndiLogic Pvt. Ltd. , 8th Floor, Supertech Astralis , Business No. 3, Office No. 816  & 848 , Sector 94, Noida, Gautam Buddha Nagar, Uttar Pradesh, Pin: 2013014</p>
+                                    <p><b>INDIA:</b> IndiLogic Pvt. Ltd. , 8th Floor, Supertech Astralis , Business No. 3, Office No. 816  & 848 , Sector 94, Noida, Gautam Buddha Nagar, Uttar Pradesh, Pin: 201301</p>
                                 </div>
                                 <div class="social-icon d-md-none d-block">
                                     <a href="#"><img src="image/Facebook.png"></a>
