--- a/about.html
+++ b/about.html
@@ -200,13 +200,13 @@
         <section class="dell">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-3">
+                    <div class="col-2">
                         <img src="image/dell.png">
                     </div>
                     <div class="col-1">
                         <div class="middle-boder"></div>
                     </div>
-                    <div class="col-8">
+                    <div class="col-9">
                         <div class="dell-text text-white">
                             <h1>Proud Strategic Partners of Dell Technologies</h1>
                             <p>At IndiLogic, we’re honored to be a strategic partner of Dell, a global leader in technology innovation. This collaboration empowers us to deliver cutting-edge solutions that drive digital transformation and success for our clients. Together, we’re shaping the future of technology.</p>
@@ -294,7 +294,7 @@
             </div>
         </div>
         <div class="bottom-footer text-white text-center">
-            <p class="pt-2">Copyright: Indilogic LLC/IndiLogic Pvt. Ltd 2024 </p>
+            <p class="pt-2">Copyright: IndiLogic LLC/IndiLogic Pvt. Ltd 2024 </p>
         </div>
     </footer>
     <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
