--- a/home.html
+++ b/home.html
@@ -202,13 +202,13 @@
         <section class="dell">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-3">
+                    <div class="col-2">
                         <img src="image/dell.png">
                     </div>
                     <div class="col-1">
                         <div class="middle-boder"></div>
                     </div>
-                    <div class="col-8">
+                    <div class="col-9">
                         <div class="dell-text text-white">
                             <h1>Proud Strategic Partners of Dell Technologies</h1>
                             <p>At IndiLogic, we’re honored to be a strategic partner of Dell, a global leader in technology innovation. This collaboration empowers us to deliver cutting-edge solutions that drive digital transformation and success for our clients. Together, we’re shaping the future of technology.</p>
@@ -266,8 +266,7 @@
                                 <img src="image/service-1.png" class="w-100">
                                 <div class="slide-up">
                                     <h4 class="text-white">Device Drivers Development</h4>
-                                    <p>Our expertise in device driver development ensures seamless interaction between hardware and software components. We create reliable, efficient, and optimized drivers that enhance device functionality
-                                        and performance, providing a smooth and stable user experience. Desktop Application Development</p>
+                                    <p>Expert in device drivers for seamless hardware-software interaction, enhancing performance and stability</p>
                                 </div>
                             </div>
                         </a>
@@ -278,10 +277,7 @@
                                 <img src="image/service-2.png" class="w-100">
                                 <div class="slide-up">
                                     <h4 class="text-white">Cross-Platform Desktop Application Development</h4>
-                                    <p>We provide comprehensive desktop
-                                        application development services, creating powerful, user-friendly applications
-                                        for various operating systems. Our tailored solutions deliver high functionality,
-                                        intuitive interfaces, and seamless integration with your existing systems.
+                                    <p>We offer cross-platform app development, creating powerful, user-friendly apps with seamless integration.
                                         </p>
                                 </div>
                                 
@@ -294,10 +290,7 @@
                                 <img src="image/service-3.png" class="w-100">
                                 <div class="slide-up">
                                     <h4 class="text-white">Firmware/IoT Development</h4>
-                                    <p>Specializing in firmware development, we craft
-                                        robust and efficient low-level software tailored for embedded systems. Our
-                                        solutions adhere to stringent industry standards, ensuring superior performance,
-                                        reliability, and security for your electronic devices.</p>
+                                    <p>Specializing in firmware & IoT, we create efficient low-level software for reliable embedded systems</p>
                                 </div>
                             </div>
                         </a>
@@ -308,10 +301,7 @@
                                 <img src="image/service-4.png" class="w-100">
                                 <div class="slide-up">
                                     <h4 class="text-white">Mobile Application Development</h4>
-                                    <p> Our mobile application development services cover the entire development lifecycle, from concept to deployment. We
-                                        develop high-performance mobile apps for iOS and Android platforms, focusing
-                                        on user experience, scalability, and security. Our solutions help you engage your
-                                        audience, streamline operations, and enhance your digital presence.</p>
+                                    <p> We offer end-to-end mobile app development for iOS and Android, focusing on performance and user experience</p>
                                 </div>
                             </div>
                         </a>
@@ -515,7 +505,7 @@
             </div>
         </div>
         <div class="bottom-footer text-white text-center">
-            <p class="pt-2">Copyright: Indilogic LLC/IndiLogic Pvt. Ltd 2024 </p>
+            <p class="pt-2">Copyright: IndiLogic LLC/IndiLogic Pvt. Ltd 2024 </p>
         </div>
     </footer>
     <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
