--- a/service.html
+++ b/service.html
@@ -508,7 +508,7 @@
             </div>
         </div>
         <div class="bottom-footer text-white text-center">
-            <p class="pt-2">Copyright: Indilogic LLC/IndiLogic Pvt. Ltd 2024 </p>
+            <p class="pt-2">Copyright: IndiLogic LLC/IndiLogic Pvt. Ltd 2024 </p>
         </div>
     </footer>
     <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
